--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -62,8 +62,8 @@ collections:
         file: "src/_data/site.json"
         fields:
           - {label: "Site Name", name: "name", widget: "string"}
-          - {label: "Logo", name: "logo", widget: "string"}
-          - {label: "NameSVG", name: "nameSVG", widget: "string"}
+          - {label: "Logo", name: "logo", widget: "image"}
+          - {label: "NameSVG", name: "nameSVG", widget: "code", lang: "xml"}
           - {label: "Site Url", name: "url", widget: "string"}
           - {label: "Author Name", name: "authorName", widget: "string"}
           - {label: "Author Email Address", name: "authorEmail", widget: "string"}
@@ -73,7 +73,7 @@ collections:
           - {label: "Show Theme Credit", name: "showThemeCredit", widget: "boolean", default: true}
           - {label: "Enable Third Party Comments Area", name: "enableThirdPartyComments", widget: "boolean", default: false}
           - {label: "Payment Pointer (Web Monetization: https://bit.ly/2kTRI1b)", name: "paymentPointer", widget: "string"}
-          - {label: "Favicon path (EG: /images/favicon.png)", name: "faviconPath", widget: "string"}
+          - {label: "Favicon", name: "faviconPath", widget: "image"}
       - label: "Navigation"
         name: "nav"
         delete: false
