--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -50,8 +50,10 @@ collections:
       - {label: "SEO Meta Title", name: "metaTitle", widget: "string", required: false}
       - {label: "SEO Meta Description", name: "metaDesc", widget: "string", required: false}
       - {label: "Social Image", name: "socialImage", widget: "image", required: false}
+      - {label: "Author", name: "author", widget: "String", required: true,
+        default:["James Foran"]}
       - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Tags", name: "tags", widget: "list", allow_add: true}
+      - {label: "Tags", name: "tags", widget: "list", allow_add: true, collapsed: "false"} 
       - {label: "Body", name: "body", widget: "markdown"}
   - label: "Globals"
     name: "globals"
