--- a/package.json
+++ b/package.json
@@ -39,13 +39,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jaffa80/hylia.git"
+    "url": "git+https://github.com/jaffa80/flexion.tech.git"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jaffa80/hylia/issues"
+    "url": "https://github.com/jaffa80/flexion.tech/issues"
   },
-  "homepage": "https://github.com/jaffa80/hylia#readme"
+  "homepage": "https://github.com/jaffa80/flexion.tech#readme"
 }
