--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -3,7 +3,7 @@ backend:
   branch: master
 publish_mode: editorial_workflow
 site_url: "https://flexion.tech"
-media_folder: "/src/images"
+media_folder: "src/images"
 public_folder: "/images"
 collections:
   - name: "pages"
